<resources>
    <string name="app_name">Panduan Bacaan Sholat</string>
    <string name="splashscreen">Panduan Bacaan Sholat</string>
    <string name="ayatkursi">AYAT KURSI</string>
    <string name="basmallah">ِسْمِ اللَّـهِ الرَّحْمَـٰنِ الرَّحِيمِ</string>
    <string name="tafsirbasmallah">ِِDengan menyebut nama Allah Yang Maha Pemurah lagi Maha Penyayang</string>
    <string name="arabayatkursi">اَللّٰهُ لَآ اِلٰهَ اِلَّا هُوَۚ اَلْحَيُّ الْقَيُّوْمُ ەۚ لَا تَأْخُذُهٗ سِنَةٌ وَّلَا نَوْمٌۗ  لَهٗ مَا فِى السَّمٰوٰتِ وَمَا فِى الْاَرْضِۗ مَنْ ذَا الَّذِيْ يَشْفَعُ عِنْدَهٗٓ اِلَّا بِاِذْنِهٖۗ يَعْلَمُ مَا بَيْنَ اَيْدِيْهِمْ وَمَا خَلْفَهُمْۚ وَلَا يُحِيْطُوْنَ بِشَيْءٍ مِّنْ عِلْمِهٖٓ اِلَّا بِمَا شَاۤءَۚ وَسِعَ كُرْسِيُّهُ السَّمٰوٰتِ وَالْاَرْضَۚ وَلَا يَـُٔوْدُهٗ حِفْظُهُمَاۚ وَهُوَ الْعَلِيُّ الْعَظِيْمُ</string>
    <string name="tafsirayatkursi">Tafsir : "Allah adalah Tuhan Yang Maha Esa, tidak ada tuhan selain Dia, dan hanya Dia yang berhak untuk disembah. Adapun tuhan-tuhan yang lain yang disembah oleh sebagian manusia dengan alasan yang tidak benar, memang banyak jumlahnya. Akan tetapi Tuhan yang sebenarnya hanyalah Allah. Hanya Dialah Yang hidup abadi, yang ada dengan sendiri-Nya, dan Dia pulalah yang selalu mengatur makhluk-Nya tanpa ada kelalaian sedikit pun. Kemudian ditegaskan lagi bahwa Allah tidak pernah mengantuk. Orang yang berada dalam keadaan mengantuk tentu hilang kesadarannya, sehingga dia tidak akan dapat melakukan pekerjaannya dengan baik, padahal Allah swt senantiasa mengurus dan memelihara makhluk-Nya dengan baik, tidak pernah kehilangan kesadaran atau pun lalai. Karena Allah tidak pernah mengantuk, sudah tentu Dia tidak pernah tidur, karena mengantuk adalah permulaan dari proses tidur. Orang yang tidur lebih banyak kehilangan kesadaran daripada orang yang mengantuk. Sifat Allah yang lain yang disebutkan dalam ayat ini ialah bahwa Dialah yang mempunyai kekuasaan dan yang memiliki apa yang ada di langit dan di bumi. Dialah yang mempunyai kekuatan dan kekuasaan yang tak terbatas, sehingga Dia dapat berbuat apa yang dikehendaki-Nya. Semuanya ada dalam kekuasaan-Nya, sehingga tidak ada satu pun dari makhluk-Nya termasuk para nabi dan para malaikat yang dapat memberikan pertolongan kecuali dengan izin-Nya, apalagi patung-patung yang oleh orang-orang kafir dianggap sebagai penolong mereka. Yang dimaksud dengan \"pertolongan\" atau \"syafaat\" dalam ayat ini ialah pertolongan yang diberikan oleh para malaikat, nabi dan orang-orang saleh kepada umat manusia pada hari kiamat untuk mendapatkan keringanan atau kebebasan dari hukuman Allah. Syafaat itu akan terjadi atas izin Allah. Dalam hadis disebutkan :\n\nNabi Saw bersabda, \"¦Kemudian Allah berfirman, \"Para Malaikat memberikan syafaat, para Nabi memberikan syafaat, dan orang-orang mukmin juga memberikan syafaat". (Surat Al-Baqarah ayat 255)</string>
    <string name="niat">NIAT SHALAT</string>
    <string name="iftitah">Doa iftitah dilakukan setelah mengangkat kedua tangan sejajar dengan telinga (untuk laki-laki) atau sejajar dengan dada (untuk perempuan) sambil membacakan "allahu akbar". Kemudian tangan disedekapkan pada dada dan baru membacakan doa iftitah. \nBerikut bacaannya:\n
    </string>
    <string name="doaiftitah">"اللهُ اَكْبَرُ كَبِرًا وَالْحَمْدُ لِلهِ كَثِيْرًا وَسُبْحَانَ اللهِ بُكْرَةً وَاَصِيْلًا . اِنِّى وَجَّهْتُ وَجْهِيَ لِلَّذِيْ فَطَرَالسَّمَاوَاتِ وَالْااَرْضَ حَنِيْفًا مُسْلِمًا وَمَا اَنَا مِنَ الْمُشْرِكِيْنَ . اِنَّ صَلَاتِيْ وَنُسُكِيْ وَمَحْيَايَ وَمَمَاتِيْ لِلهِ رَبِّ الْعَا لَمِيْنَ . لاَ شَرِيْكَ لَهُ وَبِذَ لِكَ اُمِرْتُ وَاَنَ مِنَ الْمُسْلِمِيْن"َ</string>
    <string name="takbir">Takbiratul ihram nama lainnya adalah takbiratul ula. Yakni takbir pertama ketika memulai sholat, yang juga diawali dengan niat. Dengan cara mengangkat kedua tangan, jari menyentuh daun telinga \nBacaan saat takbiratul ihram, yakni:</string>
    <string name="doatakbir"> " اللَّهُ أَكْبَرُ "</string>
    <string name="alfatihah">Setelah doa ifititah telah selesai dibacakan, bacaan selanjutnya yaitu membaca surat Al-Fatihah. Setelah membaca Al-Fatihah, bacaan selanjutnya adalah ayat pendek. Pilihlah bacaan ayat pendek yang dapat kamu hafal.\nBacaan Surat Al-Fatihah :</string>
    <string name="doaalfatihah">"بِسْمِ اللّهِ الرَّحْمَنِ الرَّحِيْمِ . الْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِينَ . الرَّحْمَٰنِ الرَّحِيم . مَالِكِ يَوْمِ الدِّينِ . إِيَّاكَ نَعْبُدُ وَإِيَّاكَ نَسْتَعِينُ . اهْدِنَا الصِّرَاطَ الْمُسْتَقِيمَ . صِرَاطَ الَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِ الْمَغْضُوبِ عَلَيْهِمْ وَلَا الضَّالِّينَ"</string>
    <string name="rukuk">Setelah selesai membaca ayat pendek gerakan selanjutnya yaitu rukuk. Gerakan rukuk yaitu mengangkat kedua tangan dan membaca "allahu akbar". Kemudian badan dibungkukkan dan kedua tangan memegang lutut. Usahakan antara punggung dan kepala sama rata. \nBacaan Rukuk :</string>
    <string name="doarukuk">Dibaca 3x : \n سُبْحَانَ رَبِّىَ الْعَظِيمِ وَبِحَمْدِهِ</string>
    <string name="itidal">Kemudian dilanjutkan dengan gerakan iktidal dengan tuma’ninah. Mengangkat punggungnya/bangun dari ruku’ yang diiringi dengan membaca bacaan i’tidal. \nBacaan I’tidal :</string>
    <string name="doaitidal">سَمِعَ اللَّهُ لِمَنْ حَمِدَهُ</string>
    <string name="doaitidal2">َّ رَبَّنَا لَكَ الْحَمْدُ مِلْءَ السَّمَوَاتِ وَمِلْءَ الأَرْضِ وَمِلْءَ مَا شِئْتَ مِنْ شَىْءٍ بَعْدُ</string>
    <string name="sujud">Setelah gerakan itidal, dilanjutkan dengan melakukan sujud pertama membaca (Allahu Akbar) dengan tuma’ninah dengan membaca bacaan sujud. \nBacaan Sujud :</string>
    <string name="doasujud">Dibaca 3x \n سُبْحَانَ رَبِّىَ الْأَعْلَى وَبِحَمْدِهِ</string>
    <string name="duduk2sujud">Setelah selesai sujud pertama maka dilanjutkan bangun dari sujud membaca (Allahu Akbar) lalu melakukan duduk diantara 2 sujud dengan posisi duduk tawaruk. Dilanjutkan dengan membaca bacaan duduk diantara 2 sujud. \nBacaan Duduk Diantara Dua Sujud :</string>
    <string name="doaduduk2sujud">رَبِّ اغْفِرْ لِيْ وَارْحَمْنِيْ وَاجْبُرْنِيْ وَارْفَعْنِيْ وَارْزُقْنِيْ وَاهْدِنِيْ وَعَافِنِيْ وَاعْفُ عَنِّيْ</string>
    <string name="tahiyatawal">Untuk rakaat kedua setelah melakukan sujud kedua, tidak langsung berdiri untuk melanjutkan rakaat berikutnya.Namun pada rakaat kedua ini setelah sujud kedua dilanjutkan dengan duduk Tawaruk dan membaca doa tahiyat awal. \nBacaan Tahiyat Awal :</string>
    <string name="doatahiyatawal">"اَلتَّحِيَّاتُ الْمُبَارَكَاتُ الصَّلَوَاتُ الطَّيِّبَاتُ ِللهِ. اَلسَّلاَمُ عَلَيْكَ أَيُّهَا النَّبِيُّ وَرَحْمَةُ اللهِ وَبَرَكَاتُهُ. اَلسَّلاَمُ عَلَيْنَا وَعَلَى عِبَادِ اللهِ الصَّالِحِيْنَ. أَشْهدُ اَنْ لاَإِلَهَ إِلاَّ اللهُ وَاَشْهَدُ أَنَّ مُحَمَّدًا رَسُوْلُ اللهِ"</string>
    <string name="doatasyahudakhir">Dilanjut dengan Bacaan Sholawat Nabi : \nاَللَّهُمَّ صَلِّ عَلىَ مُحَمَّدٍ وَعَلىَ آلِ مُحَمَّدٍ كَماَ صَلَّيْتَ عَلىَ إِبْرَاهِيْمَ وَعَلىَ آلِ إِبْرَاهِيْمَ إِنـَّكَ حَمِيْدٌ مَجِيْدٌ اَللَّهُمَّ باَرِكْ عَلىَ مُحَمَّدٍ وَعَلىَ آلِ مُحَمَّدٍ كَماَ باَرَكْتَ عَلىَ إِبْرَاهِيْمَ وَعَلىَ آلِ إِبْرَاهِيْمَ إِنـَّكَ حَمِيْدٌ مَجِيْدٌ</string>
    <string name="tasyahudakhir">Untuk rakaat terakhir atau rakaat kedua, ketiga atau keempat, setelah sujud terakhir maka dilanjutkan denga duduk iftirasy.Ketika melakukan duduk iftirasy pada rakaat terakhir setelah sujud terakhir, dilanjutkan dengan membaca doa tahiyat Akhir. yang bacaannya sama dengan bacaan doa tahiyat Awal.Hanya pada tahiyat akhir dilanjutkan dengan membaca doa sholawat nabi yang ditukukan kepada nabi Ibrahim dan nabi Muhammad. \nBacaanTasyahudAkhir :</string>
    <string name="salam">Gerakan dan bacaan terakhir dalam sholat adalah dengan mengucapkan salam dua kali dengan menoleh ke arah kanan dan ke arah kiri. \nBacaan Salam :</string>
    <string name="doasalam">"السَّلاَمُ عَلَيْكُمْ وَرَحْمَةُ اللهِ"</string>


</resources>