<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AyatKursi"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtHeader1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ayatkursi"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtHeader2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtHeader1"
                android:layout_marginTop="6dp"
                android:text="Bacaan Ayat Kursi dengan Tafsirnya"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/ayatkursi"
                android:src="@drawable/ayatkursi" />

            <TextView
                android:id="@+id/txtHeader3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtHeader2"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/basmallah"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtHeader4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtHeader3"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tafsirbasmallah"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="11sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="445dp"
            android:layout_below="@id/txtHeader4"
            android:layout_marginTop="50dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arabayatkursi"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tafsirayatkursi"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>