<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacaanshalat"
    tools:context=".TasyahudAkhir"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tasyahudakhir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:text="TASYAHUD AKHIR"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="1000px"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/tasyahudakhir" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/tasyahudakhir"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/doatahiyatawal"
            android:textColor="@color/black"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/doatasyahudakhir"
            android:textColor="@color/black"
            android:textSize="30sp" />

    </LinearLayout>

</ScrollView>